--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,8 +30,8 @@
     <header id="header" th:replace="~{/fragments/header :: headerFragment}"></header>
     <div id="allPage">
         <section id="left_side" th:replace="~{/fragments/left_side :: leftFragment}"></section>
-        <div id="contents">wow</div>
         <div id="right_side" th:replace="~{/fragments/right_side :: rightFragment}"></div>
+        <div id="contents"></div> <!-- 현재 페이지를 넣ㅎㅎ -->
     </div>
 </div>
     
