--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -14,7 +14,11 @@ body{
     color: aliceblue;
     text-decoration: none;
     font-weight: 500;
-    margin-right: 30px;
+    margin: 5px 10px;
 
 }
 .header li{ list-style: none;}
+
+button:hover {
+    cursor: pointer;
+}
