--- a/src/main/resources/templates/board/imageList.html
+++ b/src/main/resources/templates/board/imageList.html
@@ -31,6 +31,12 @@
             border: 2px solid #5d5d5d;
             padding: 30px 20px;
         }
+
+        .imgList:hover {
+            cursor: pointer;
+            transition: 0.2s ease-out;
+            opacity: 0.5;
+        }
     </style>
 
     <div id="wrap">
