--- a/src/main/resources/templates/fragments/left_side.html
+++ b/src/main/resources/templates/fragments/left_side.html
@@ -40,8 +40,8 @@
                     </div>
                 </div>
                 <div id="lsidebar2">
-                    <iframe width="280" height="500" frameborder=0 framespacing=0 marginheight=0 marginwidth=0
-                        scrolling=yes vspace=0 src="http://192.168.0.197:8083/chat/JeaDragon"></iframe>
+                    <!-- <iframe width="280" height="500" frameborder=0 framespacing=0 marginheight=0 marginwidth=0
+                        scrolling=yes vspace=0 src="http://192.168.0.197:8083/chat/JeaDragon"></iframe> -->
                 </div>
     </section>
 
